example/lib/src/generated/errors/errors_localization_bn.dart
// This file is generated by the Google Sheets localization tool. Do not edit manually.

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Bengali Bangla (`bn`).
class ErrorsLocalizationBn extends ErrorsLocalization {
  ErrorsLocalizationBn([String locale = 'bn']) : super(locale);

  @override
  String get error => 'একটি ত্রুটি ঘটেছে';

  @override
  String get unexpectedError => 'একটি অপ্রত্যাশিত ত্রুটি ঘটেছে৷';

  @override
  String authErrorMessages(String errorCode) {
    String _temp0 = intl.Intl.selectLogic(
      errorCode,
      {
        'passwordLengthError': 'পাসওয়ার্ড কমপক্ষে ৬ অক্ষরের হতে হবে',
        'invalidEmailOrPhoneNumberError':
            'সঠিক ইমেইল বা আন্তর্জাতিক ফরম্যাটে ফোন নম্বর দিন। উদাহরণ: me@example.com এবং +1234567890987',
        'invalidEmailError': 'ইমেইল বৈধ নয়',
        'operationNotAllowedError': 'অপারেশন অনুমোদিত নয়',
        'weakPasswordError': 'পাসওয়ার্ড খুব দুর্বল',
        'userTokenExpiredError': 'ব্যবহারকারীর টোকেনের মেয়াদ শেষ হয়েছে',
        'invalidPhoneNumberError':
            'আন্তর্জাতিক ফরম্যাটে, + এবং দেশের কোড দিয়ে শুরু এমন ফোন নম্বর দিন।',
        'invalidActionCodeError': 'অ্যাকশন কোড বৈধ নয়',
        'networkRequestFailedError': 'নেটওয়ার্ক অনুরোধ ব্যর্থ হয়েছে',
        'tooManyRequestsError': 'অনুরোধ খুব বেশি',
        'acceptTermsAndConditionsError':
            'শর্তাবলীতে সম্মতি দিন এবং গোপনীয়তা নীতিমালা স্বীকার করুন।',
        'acceptAIConsentError':
            'অনুগ্রহ করে নিশ্চিত করুন যে পরামর্শটি একটি AI এর সাথে, কোনো লাইসেন্সধারী চিকিৎসক নন।',
        'emailOrPhoneError': 'ইমেইল বা ফোন ত্রুটি',
        'passwordError': 'পাসওয়ার্ড ত্রুটি',
        'unknownError': 'অজানা ত্রুটি',
        'googleSSOError': 'Google SSO ত্রুটি',
        'emailAlreadyInUse':
            'এই ইমেইল ঠিকানাটি ইতিমধ্যেই অন্য একটি অ্যাকাউন্টে ব্যবহৃত হচ্ছে।',
        'invalidCredentialError': 'অবৈধ ক্রেডেনশিয়াল',
        'invalidAppCredentialError': 'অ্যাপের ক্রেডেনশিয়াল অবৈধ',
        'invalidVerificationCodeError': 'যাচাইকরণ কোড অবৈধ',
        'other': 'অজানা ত্রুটি',
      },
    );
    return '$_temp0\r\n';
  }

  @override
  String get bugReportSentText => 'বাগ রিপোর্ট সফলভাবে পাঠানো হয়েছে।';
}
